# snarf

./: Cargo.toml  README.md  build.rs  closure.json  flake.nix  module.nix  notes.md  result
.woodpecker/: flake-check.yaml
proto/: management.proto
sql/: V1__create_server_state.sql  V1_create_server_state.sql  V2__create_nar_cache.sql
src/: cache.rs  client.rs  database.rs  keys.rs  lib.rs  main.rs  management.rs  server.rs  store.rs  store_wrapper.h
src/database/: mod.rs  nix.rs  snarf.rs
src/server/: mod.rs  services.rs  state.rs
