[package]
name = "snarf"
version = "0.1.0"
edition = "2024"

[dependencies]
snix-castore = { git = "https://git.snix.dev/snix/snix.git" }
snix-store = { git = "https://git.snix.dev/snix/snix.git" }
snix-glue = { git = "https://git.snix.dev/snix/snix.git" }
snix-build = { git = "https://git.snix.dev/snix/snix.git" }
snix-eval = { git = "https://git.snix.dev/snix/snix.git" }
nar-bridge = { git = "https://git.snix.dev/snix/snix.git" }
nix-compat = { git = "https://git.snix.dev/snix/snix.git" }
futures = "0.3"
clap = "4.5"
tokio = { version = "1", features = ["full"] }
tokio-listener = { version = "0.5.2", features = ["axum07", "clap"] }
tracing = { version = "0.1.41", features = ["max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
axum = "0.8.4"
tonic = "0.12.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.7"
