[package]
name = "snarf"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "snarfd"
path = "src/bin/server.rs"

[[bin]]
name = "snarf"
path = "src/bin/client.rs"

[dependencies]
snix-castore = { git = "https://git.snix.dev/snix/snix.git" }
snix-store = { git = "https://git.snix.dev/snix/snix.git" }
nar-bridge = { git = "https://git.snix.dev/snix/snix.git" }
nix-compat = { git = "https://git.snix.dev/snix/snix.git" }
futures = "0.3"
clap = { version = "4.5", features = [ "string" ] }
tokio = { version = "1", features = ["full"] }
tokio-listener = { version = "0.5.2", features = ["axum07", "clap"] }
tracing = { version = "0.1.41", features = ["max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
axum = "0.8.4"
tonic = "0.12.3"
prost = "0.13.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.7"
rusty_paseto = { version = "0.7.2", features = ["batteries_included", "v4_public"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pkcs8"] }
rand_core = "0.6.4"
directories = "6.0.0"
base64 = "0.22.1"
thiserror = "2.0.17"
rusqlite = { version = "0.38.0", features = [ "fallible_uint" ] }
anyhow = "1.0.100"

[build-dependencies]
tonic-build = "0.12.3"
